--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
         "python",
         "ultroid"
     ],
-    "repository": "https://github.com/rommelmanalu/Ultroid",
+    "repository": "https://github.com/rommelmanalu/Asik",
     "website": "https://ultroid.tech",
     "success_url": "https://t.me/TheUltroid",
     "stack": "container",
